# WRR

./: .gitignore  README.md  pyproject.toml
configs/: default.json  demo.json  llava_next_video.json  llava_next_video_2x4090.json  llava_next_video_2x4090_learned.json  llava_next_video_2x4090_smoke.json  llava_next_video_4090_smoke.json  llava_next_video_learned.json  river_field_map.example.json
examples/: demo_episode.json
tests/: test_agent.py  test_benchmarks.py  test_cache.py  test_scoring.py
wrr/: __init__.py  agent.py  backend.py  cli.py  config.py  controller.py  data.py  eval.py  media.py  memory.py  retriever.py  scoring.py  train.py  types.py  vector_ops.py  watcher.py
wrr/benchmarks/: __init__.py  ovo.py  river.py  streamingbench.py
